@@ -7,6 +7,7 @@ Bugs fixed:
 - 3416055 SIGSEGV sometimes does not print provider name
 - 3416167 CIM_InstDeletion not in class repo by default
 - 3422650 Associators calls to IndicationService depends on cmpi-base
+- 3428806 type=null in authorizeFilter call
 
 Changes in 1.3.13
 =================
